--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Crypto currency</title>
+    <link rel="stylesheet" href="">
+    <title>Crypto Currency</title>
 </head>
 <body>
-    
-
-    
+    <main-section></main-section>
+    <script type="module" src="/js/app.js"></script>
 </body>
 </html>
